<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    tools:context=".ui.screens.VideoPlayActivity">

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtubePlayerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showFullScreenButton="false"
        app:showSeekBar="false"
        app:showVideoCurrentTime="false"
        app:showVideoDuration="false"
        app:showYouTubeButton="false" />

    <Button
        android:id="@+id/menubt"
        android:background="#00FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/progressLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99444444"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contrLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9903dac5"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="89dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:rotation="-90"
            android:text="TextView"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nameText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="56dp"
            android:gravity="center"
            android:rotation="-90"
            android:text="TextView"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/titleText"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/venergy"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/titleText"
            app:layout_constraintEnd_toStartOf="@+id/timeText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/venergyCountText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="120dp"
            android:gravity="center"
            android:rotation="-90"
            android:text="0"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/titleText"
            app:layout_constraintEnd_toStartOf="@+id/timeText"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:rotation="-90"
            android:text="0:00:00"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/noAdsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/dashed_line"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/no_ads"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/timeText"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="90dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/textExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:gravity="center"
                android:rotation="-90"
                android:text="@string/exit"
                android:textAllCaps="true"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/playAndPauseIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#00000000"
                android:scaleType="fitXY"
                android:layout_weight="0"
                android:rotation="-90"
                app:srcCompat="@drawable/pause" />

            <Button
                android:id="@+id/textMute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:gravity="center"
                android:rotation="-90"
                android:text="@string/mute"
                android:textAllCaps="true"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>